--- a/Code/app/src/main/res/layout/activity_extension_material_prepared.xml
+++ b/Code/app/src/main/res/layout/activity_extension_material_prepared.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".Extension.ExtensionMaterialPreparedActivity">
+    tools:context=".Extension.ExtensionMaterialPrepared.ExtensionMaterialPreparedActivity">
 
 
     <RelativeLayout
