--- a/Code/app/src/main/res/layout/activity_farm_agro_forestry_main.xml
+++ b/Code/app/src/main/res/layout/activity_farm_agro_forestry_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".GAD.FarmAgroForestryMainActivity">
+    tools:context=".GAD.FarmAgroForestry.FarmAgroForestryMainActivity">
 
     <RelativeLayout
         android:id="@+id/action_bar"
