--- a/Code/app/src/main/res/layout/activity_youth_wemon_nursery.xml
+++ b/Code/app/src/main/res/layout/activity_youth_wemon_nursery.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".GAD.YouthWemonNurseryActivity">
+    tools:context=".GAD.YouthWemenNursery.YouthWemonNurseryActivity">
 
     <RelativeLayout
         android:id="@+id/action_bar"
