--- a/Code/app/src/main/res/layout/activity_youth_wemon_nursery.xml
+++ b/Code/app/src/main/res/layout/activity_youth_wemon_nursery.xml
@@ -47,6 +47,40 @@
             app:hintTextColor="@color/colorBlack">
 
             <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/et_youthWomenNursery_employeeNo"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:hint="Employee No"
+                android:inputType="text" />
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+
+        <com.google.android.material.textfield.TextInputLayout
+            style="@style/EditTextOutline"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:boxStrokeColor="@color/colorBlack"
+            app:hintTextColor="@color/colorBlack">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/et_youthWomenNursery_employeeName"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:hint="Employee Name"
+                android:inputType="text" />
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            style="@style/EditTextOutline"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:boxStrokeColor="@color/colorBlack"
+            app:hintTextColor="@color/colorBlack">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/et_youthWomenNursery_NameOfDivision"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:hint="Name of Division"
@@ -62,6 +96,7 @@
             app:hintTextColor="@color/colorBlack">
 
             <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/et_youthWomenNursery_nameOfSubDivisionRange"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:hint="Name of Sub-Division | Range"
@@ -78,6 +113,7 @@
             app:hintTextColor="@color/colorBlack">
 
             <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/et_youthWomenNursery_vdcWO"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:hint="VDC | WO"
@@ -93,6 +129,7 @@
             app:hintTextColor="@color/colorBlack">
 
             <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/et_youthWomenNursery_nameOfNurseryOwner"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:hint="Name of Nursery Owner"
@@ -108,6 +145,7 @@
             app:hintTextColor="@color/colorBlack">
 
             <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/et_youthWomenNursery_locationVillagename"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:hint="Location | Village Name"
@@ -123,6 +161,7 @@
             app:hintTextColor="@color/colorBlack">
 
             <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/et_youthWomenNursery_limit"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:hint="Limit"
@@ -131,6 +170,7 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <LinearLayout
+            android:id="@+id/bt_youthWemenNursery_submit"
             android:layout_width="match_parent"
             android:layout_height="46dp"
             android:layout_gravity="center"
