--- a/Code/app/src/main/res/layout/activity_j_f_m_c_view_data.xml
+++ b/Code/app/src/main/res/layout/activity_j_f_m_c_view_data.xml
@@ -47,7 +47,7 @@
             app:hintTextColor="@color/colorBlack">
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/et_email"
+                android:id="@+id/et_viewJFMC_search"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:hint="Search"
