--- a/Code/app/src/main/res/layout/activity_main.xml
+++ b/Code/app/src/main/res/layout/activity_main.xml
@@ -6,5 +6,12 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".MainActivity">
+
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerview"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+    </androidx.recyclerview.widget.RecyclerView>
     
 </LinearLayout>
