--- a/Code/app/src/main/res/layout/activity_view__form_forestry_data.xml
+++ b/Code/app/src/main/res/layout/activity_view__form_forestry_data.xml
@@ -56,7 +56,7 @@
             app:hintTextColor="@color/colorBlack">
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/et_email"
+                android:id="@+id/et_ViewFarmForestry_Search"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:hint="Search"
