--- a/Code/app/src/main/res/layout/activity_view_celebration_of_environmental_planting.xml
+++ b/Code/app/src/main/res/layout/activity_view_celebration_of_environmental_planting.xml
@@ -53,7 +53,7 @@
             app:hintTextColor="@color/colorBlack">
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/et_email"
+                android:id="@+id/et_ViewCelebrationOfEnvironmentalPlanting_Search"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:hint="Search"
