--- a/Code/app/src/main/res/layout/activity_view_mass_planting_event.xml
+++ b/Code/app/src/main/res/layout/activity_view_mass_planting_event.xml
@@ -55,7 +55,7 @@
             app:hintTextColor="@color/colorBlack">
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/et_email"
+                android:id="@+id/et_ViewMassPlantingEvent_search"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:hint="Search"
