--- a/Code/app/src/main/res/layout/activity_view_other.xml
+++ b/Code/app/src/main/res/layout/activity_view_other.xml
@@ -57,7 +57,7 @@
             app:hintTextColor="@color/colorBlack">
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/et_email"
+                android:id="@+id/et_ViewOtherActivity_search"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:hint="Search"
