--- a/Code/app/src/main/res/layout/activity_view_gad_mass_planting_event.xml
+++ b/Code/app/src/main/res/layout/activity_view_gad_mass_planting_event.xml
@@ -15,6 +15,7 @@
         android:background="@color/colorGreen">
 
         <ImageView
+            android:id="@+id/iv_ViewGADMassPlantingEvent_back"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
